extra space on group page removed and bug nav bar fixed

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -41,7 +41,8 @@ h1 {
 }
 
 .navbar-nav{
-  margin-left: 650px;
+  right: 60px;
+  position: absolute;
 }
 
 
